Working on the grid overlay

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>E-learning</title>
 </head>
+
 <body>
     <div class="Nav-bar">
         <ul>
@@ -17,33 +19,75 @@
             <li><button>Login</button></li>
             <li><button>Sign Up</button></li>
         </ul>
-    </div> 
+    </div>
     <div class="banner">
         <img src="/images/thought-catalog-o0Qqw21-0NI-unsplash.jpg">
     </div>
     <p class="elearning">E-LEARNING RESOURCE LIBRARY</p>
 
     <div class="gridwrapper">
-        <a href="#"><div class="box" id="aws">
-            <h1> </h1>
-        </div></a>
-        <a href="#"><div class="box" id="react">
-            <h1> </h1>
-        </div></a>
-        <a href="#"><div class="box" id="react-native">
-            <h1>  NATIVE</h1>
-        </div></a>
-        <a href="#"><div class="box" id="node-js">
-            <h1> </h1
-                >
-        </div></a>
-        <a href="#"><div class="box" id="agile">
-            <h1> </h1>
-        </div></a>
-        <a href="#"><div class="box" id="adobe-after-effect">
-            <h1> </h1>
-        </div></a>
+        <a href="#">
+            <div class="box" id="aws">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>AWS</h1>
+                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
+                        service with customizable configuration and pay as you go service</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box" id="react">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>AWS</h1>
+                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
+                        service with customizable configuration and pay as you go service</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box" id="react-native">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>AWS</h1>
+                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
+                        service with customizable configuration and pay as you go service</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box" id="node-js">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>AWS</h1>
+                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
+                        service with customizable configuration and pay as you go service</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box" id="agile">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>AWS</h1>
+                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
+                        service with customizable configuration and pay as you go service</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box" id="adobe-after-effect" class="overlay">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>AWS</h1>
+                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
+                        service with customizable configuration and pay as you go service</p>
+                </div>
+            </div>
+        </a>
 
     </div>
 </body>
+
 </html>
