Fixing the grid hover effect

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="box" id="react">
                 <h1> </h1>
                 <div class="hidden-text">
-                    <h1>AWS</h1>
+                    <h1>REACT</h1>
                     <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
                         service with customizable configuration and pay as you go service</p>
                 </div>
@@ -50,7 +50,7 @@
             <div class="box" id="react-native">
                 <h1> </h1>
                 <div class="hidden-text">
-                    <h1>AWS</h1>
+                    <h1>REACT NATIVE</h1>
                     <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
                         service with customizable configuration and pay as you go service</p>
                 </div>
@@ -60,7 +60,7 @@
             <div class="box" id="node-js">
                 <h1> </h1>
                 <div class="hidden-text">
-                    <h1>AWS</h1>
+                    <h1>NODE JS</h1>
                     <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
                         service with customizable configuration and pay as you go service</p>
                 </div>
@@ -70,7 +70,7 @@
             <div class="box" id="agile">
                 <h1> </h1>
                 <div class="hidden-text">
-                    <h1>AWS</h1>
+                    <h1>AGILE</h1>
                     <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
                         service with customizable configuration and pay as you go service</p>
                 </div>
@@ -80,7 +80,7 @@
             <div class="box" id="adobe-after-effect" class="overlay">
                 <h1> </h1>
                 <div class="hidden-text">
-                    <h1>AWS</h1>
+                    <h1>ADOBE AFTER EFFECT</h1>
                     <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
                         service with customizable configuration and pay as you go service</p>
                 </div>
