Adding new courses

--- a/index.html
+++ b/index.html
@@ -87,6 +87,44 @@
             </div>
         </a>
 
+        <a href="https://drive.google.com/drive/folders/1OjiPNHMVbxoNIHw2UVrbzz7sNg8Nzaeu?usp=sharing">
+            <div class="box" id="starting-a-career-in-tech" class="overlay">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>STARTING A CAREER IN TECH</h1>
+                    <p>Technology is a very broad field. This means that there are different areas in tech that require
+                        certain skills. In order to discover the right role for yourself, you need to do some research.
+                    </p>
+                </div>
+            </div>
+        </a>
+
+        <a href="https://drive.google.com/drive/folders/1o18Tff3Lj0f4kl7NWxUyRf7JMVm9ZI6r?usp=sharing">
+            <div class="box" id="datascience" class="overlay">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>DATA SCIENCE</h1>
+                    <p>Data science is the domain of study that deals with vast volumes of data using modern tools and
+                        techniques to find unseen patterns, derive meaningful information, and make business decisions.
+                        Data science uses complex machine learning algorithms to build predictive models.</p>
+                </div>
+            </div>
+        </a>
+
+        <a href="https://drive.google.com/drive/folders/1w36dLZ9Ut6duOzRUY03ES2NNZRHO-Yk1?usp=sharing">
+            <div class="box" id="cyberSecurity" class="overlay">
+                <h1> </h1>
+                <div class="hidden-text">
+                    <h1>CYBER SECURITY</h1>
+                    <p>Computer security, cybersecurity, or information technology security is the protection of
+                        computer systems and networks from information disclosure, theft of, or damage to their material
+                        hardware, software, or electronic data, as well as from the disruption or misdirection of the
+                        services they provide. </p>
+                </div>
+            </div>
+        </a>
+
+
     </div>
 </body>
 
