--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 <h1> </h1>
                 <div class="hidden-text">
                     <h1>REACT</h1>
-                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
-                        service with customizable configuration and pay as you go service</p>
+                    <p>React is a free and open-source front-end JavaScript library for building user interfaces based
+                        on UI components. It is maintained by Meta and a community of individual developers and
+                        companies</p>
                 </div>
             </div>
         </a>
@@ -51,8 +52,9 @@
                 <h1> </h1>
                 <div class="hidden-text">
                     <h1>REACT NATIVE</h1>
-                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
-                        service with customizable configuration and pay as you go service</p>
+                    <p>React Native is an open-source UI software framework created by Meta Platforms, Inc. It is used
+                        to develop applications for Android, Android TV, iOS, macOS, tvOS, Web, Windows and UWP by
+                        enabling developers to use the React framework along with native platform capabilities.</p>
                 </div>
             </div>
         </a>
@@ -61,8 +63,8 @@
                 <h1> </h1>
                 <div class="hidden-text">
                     <h1>NODE JS</h1>
-                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
-                        service with customizable configuration and pay as you go service</p>
+                    <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on
+                        the V8 engine and executes JavaScript code outside a web browser.</p>
                 </div>
             </div>
         </a>
@@ -71,8 +73,9 @@
                 <h1> </h1>
                 <div class="hidden-text">
                     <h1>AGILE</h1>
-                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
-                        service with customizable configuration and pay as you go service</p>
+                    <p>Agile software development refers to software development methodologies centered around the idea
+                        of iterative development, where requirements and solutions evolve through collaboration between
+                        self-organizing cross-functional teams.</p>
                 </div>
             </div>
         </a>
@@ -81,8 +84,10 @@
                 <h1> </h1>
                 <div class="hidden-text">
                     <h1>ADOBE AFTER EFFECT</h1>
-                    <p>Amazon Web Services is one the top cloud service provider, the provide a wide varity of cloud
-                        service with customizable configuration and pay as you go service</p>
+                    <p>Adobe After Effects is a digital visual effects, motion graphics, and compositing application
+                        developed by Adobe Systems and used in the post-production process of film making, video games
+                        and television production. Among other things, After Effects can be used for keying, tracking,
+                        compositing, and animation.</p>
                 </div>
             </div>
         </a>
